--- a/api-2.0/views/addSensor.ejs
+++ b/api-2.0/views/addSensor.ejs
@@ -2,13 +2,14 @@
 <html>
 <head>
     <title>Add Sensor</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <h1>Add Sensor</h1>
 
     <% if (success) { %>
         <% if (success === 'success') { %>
-          <div style="color: green;">Ajout du capteur réussi !</div>
+          <div id="success-message;">Ajout du capteur réussi !</div>
         <% } else if (success === 'failure') { %>
           <div style="color: red;">Échec de l'ajout du capteur.</div>
         <% } %>
@@ -39,7 +40,7 @@
         <button onclick="redirectToDashboard()">Retour</button>
         <script>
             function redirectToDashboard() {
-                window.location.href = "/dashboard";
+                window.location.href = "/viewSensors";
             }
         </script>
     </div>
