--- a/api-2.0/views/css/addSensor.css
+++ b/api-2.0/views/css/addSensor.css
@@ -74,3 +74,13 @@ form > div:last-child {
 .button-container {
     margin-top: 20px;
 }
+
+.message {
+    background-color: #f5f5f5;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
+}
+
