query patient et sensorId

--- a/api-2.0/views/viewMonitoring.ejs
+++ b/api-2.0/views/viewMonitoring.ejs
@@ -50,13 +50,13 @@
                         <tbody>
                             <% monitoring.forEach(function(capsule) { %>
                                 <tr>
-                                    <td><%= capsule.ID %></td>
-                                    <td><%= capsule.SensorID %></td>
+                                    <td><%= capsule.Id %></td>
+                                    <td><%= capsule.SensorId %></td>
                                     <td><%= capsule.SensorType %></td>
                                     <td><%= capsule.Patient %></td>
-                                    <td><%= capsule.TimeStamp %></td>
-                                    <td><%= capsule.valueA %></td>
-                                    <td><%= capsule.valueB %></td>
+                                    <td><%= capsule.Timestamp %></td>
+                                    <td><%= capsule.ValueA %></td>
+                                    <td><%= capsule.ValueB %></td>
                                 </tr>
                             <% }); %>
                         </tbody>
